--- a/css/main.css
+++ b/css/main.css
@@ -14,19 +14,10 @@ a
 	display: none;
 }
 
-.divider
-{
-	max-width: 1000px;
-	height: 2px;
-	margin: 0 auto;
-	background: #485725;
-}
-
 #siteContainer
 {
-	max-width: 1400px;
 	margin: 0 auto;
-	height: auto;
+	max-width: 1400px;
 	text-decoration: none;
 	background: #FFF;
 	font-family: Arial;
@@ -40,9 +31,17 @@ a
 
 @media screen and (min-width: 960px) {
 
+.divider
+{
+	max-width: 900px;
+	height: 2px;
+	margin: 0 auto;
+	background: #485725;
+}
+
 .extraSpace
 {
-	width: 900px;
+	width: 960px;
 	height: auto;
 	margin: 0 auto;
 	align-content: center;
@@ -81,7 +80,7 @@ a
 
 #mainNav {
 	height: 150px;
-	min-width: 960px;
+	width: 960px;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cedcad+0,ffffff+100 */
 	background: #cedcad; /* Old browsers */
     background: -moz-linear-gradient(top, #cedcad 0%, #ffffff 100%); /* FF3.6-15 */
@@ -91,13 +90,14 @@ a
 	display: flex;
 	justify-content: space-evenly;
 	text-align: center;
+	margin: 0 auto;
 }
 
 #logoContainer {
-	width: 100px;
-	height: 100px;
+	width: 150px;
+	height: 150px;
 	margin-top: 10px;
-	margin-left: 25px;
+	margin-left: 15px;
 }
 
 #mainNav ul {
@@ -149,6 +149,7 @@ a
 
 #membershipText
 {	
+	width: 960px;
 	height: 275px;
 	font-family: Arial;
 	font-size: 30px;
@@ -172,9 +173,8 @@ a
 
 #fundraiser
 {
-	width: 975px;
+	width: 920px;
 	height: auto;
-	margin-left: 175px;
 	font-size: 30px;
 	padding: 20px;
 	margin: 0 auto;
@@ -215,7 +215,6 @@ a
 .fundraiserTitle
 {
 	text-align: center;
-	width: 225px;
 }
 
 #fundraiserText
@@ -240,16 +239,15 @@ a
 
 #footerNav ul
 {
-	width: 1350px;
+	width: 960px;
 	display: flex;
 	height: 50px;
-	margin-left: 50px;
 }
 
 #footerNav ul li 
 {
 	font-family: Arial;
-	font-size: 20px;
+	font-size: 14px;
 	color: #5d7032;
 	margin-top: 15px;
 	margin-left: 10px;
@@ -262,20 +260,12 @@ a
 	color: #5d7032;
 	text-decoration: none;
 	flex-direction: row;
-	padding: 5px;
 	border-radius: 10px;
+	text-align: center;
 }
 
 #footerNav ul li a:hover {
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
-	background: #b2c584; /* Old browsers */
-    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
-	box-shadow: 2px 1px 18px #a6b87b;
-	border-radius: 10px;
-	padding: 5px;
+	color: #FFF;
 }
 
 .sbutton
@@ -302,6 +292,8 @@ a
 .hero
 {
 	height: 400px;
+	width: 960px;
+	margin: 0 auto;
 	background-image: linear-gradient(rgba(255, 255, 204, 0.13), rgba(0, 0, 0, 0)), url("../images/hero.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
@@ -310,7 +302,7 @@ a
 }
 
 #heroSlogan {
-	width: 975px;
+	width: 960px;
 	height: 75px;
 	margin: 0 auto;
 	margin-top: 25px;
@@ -323,7 +315,7 @@ a
 
 #heroText
 {
-	width: 975px;
+	width: 960px;
 	height: 75px;
 	margin: 0 auto;
 	margin-top: 25px;
@@ -339,20 +331,25 @@ a
 	padding: 10px; 
 }
 
+#missionBG
+{
+	width: 960px;
+}
+
 /*Announcements*/
 
 #announcements
 {
 	margin-top: 25px;
 	margin-bottom: 25px;
-	width: 975px;
+	width: 960px;
 	height: auto;
 	color: #5d7032;
 }
 
 .announcements
 {	
-	width: 975px;
+	width: 940px;
 	padding: 10px;
 	margin-left: 30px;
 	font-family: Arial;
@@ -384,7 +381,7 @@ a
 {
 	margin-top: 25px;
 	margin-bottom: 25px;
-	width: 975px;
+	width: 960px;
 	height: auto;
 	color: #5d7032;
 	font-family: Arial;
@@ -392,15 +389,12 @@ a
 
 .businesses
 {
-	width: 975px;
-	height: auto;
 	display: flex;
 	margin-top: 20px;
 }
 
 .businessText
 {	
-	width: 600px;
 	margin-left: 30px;
 	text-indent: 20px;
 	flex-direction: row;
@@ -418,7 +412,7 @@ a
 
 .comittee
 {
-	width: 1000px;
+	min-width: 960px;
 	margin-top: 25px;
 	margin-bottom: 25px;
 	font-family: Arial;
@@ -429,7 +423,7 @@ a
 
 .comittees
 {
-	width: 1000px;
+	min-width: 960px;
 	color: #5d7032;
 	text-align: left;
 	justify-content: space-evenly;
@@ -1239,8 +1233,6 @@ input [ type=text ], select, textarea, #message
 	line-height: 27px;
 }
 
-
-
 #dataCon
 {
 	width: 975px;
@@ -1284,9 +1276,87 @@ input [ type=text ], select, textarea, #message
 
 } /*end web media query1*/
 
+/*WEB MEDIA QUERY 2*/
+@media screen and (min-width: 1050px) {
+
+.divider
+{
+	max-width: 960px;
+}
+
+.extraSpace
+{
+	width: 975px;
+	height: auto;
+	margin: 0 auto;
+	align-content: center;
+}
+
+#footer {
+	height: 50px;
+	width: 1050px;
+	margin: 0 auto;
+	color: #5d7032;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,cedcad+100 */
+	background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #cedcad 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#cedcad 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#cedcad 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#cedcad',GradientType=0 ); /* IE6-9 */
+	display: flex;
+}
+
+#footerNav ul
+{
+	width: 1050px;
+	display: flex;
+	height: 50px;
+}
+
+#footerNav ul li 
+{
+	font-family: Arial;
+	text-align: center;
+	font-size: 16px;
+	color: #5d7032;
+	margin-top: 15px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+
+#footerNav ul li a 
+{
+	color: #5d7032;
+	text-decoration: none;
+	flex-direction: row;
+	padding: 5px;
+	border-radius: 10px;
+}
+
+.sbutton
+{
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
+	background: #b2c584; /* Old browsers */
+    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
+	box-shadow: 2px 1px 18px #a6b87b;
+	border-radius: 10px;
+	padding: 5px;
+}
+
+} /*end web media query 2*/ 
+
 @media screen and (min-width: 1200px) {
 
-	#mainNav {
+.divider
+{
+	max-width: 1000px;
+}
+
+#mainNav {
 	height: 175px;
 	width: 1400px;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cedcad+0,ffffff+100 */
@@ -1393,18 +1463,6 @@ input [ type=text ], select, textarea, #message
 	border-radius: 10px;
 }
 
-#footerNav ul li a:hover {
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
-	background: #b2c584; /* Old browsers */
-    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
-	box-shadow: 2px 1px 18px #a6b87b;
-	border-radius: 10px;
-	padding: 5px;
-}
-
 .sbutton
 {
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
@@ -1417,5 +1475,169 @@ input [ type=text ], select, textarea, #message
 	border-radius: 10px;
 	padding: 5px;
 }
+
+/*INDEX PAGE*/
+
+#heroContainer
+{
+	height: 500px;
+	background: #999;
+}
+
+.hero
+{
+	height: 400px;
+	background-image: linear-gradient(rgba(255, 255, 204, 0.13), rgba(0, 0, 0, 0)), url("../images/hero.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+}
+
+#heroSlogan {
+	width: 975px;
+	height: 75px;
+	margin: 0 auto;
+	margin-top: 25px;
+	margin-bottom: 25px;
+	text-align: center;
+	font-family: Arial;
+	font-size: 30px;
+	color: #FFF;
+}
+
+#heroText
+{
+	width: 975px;
+	height: 75px;
+	margin: 0 auto;
+	margin-top: 25px;
+	margin-bottom: 25px;
+	text-align: center;
+	font-family: Arial;
+	font-size: 30px;
+	color: #5d7032;
+}
+
+#heroText p
+{
+	padding: 10px; 
+}
+
+/*Announcements*/
+
+#announcements
+{
+	margin-top: 25px;
+	margin-bottom: 25px;
+	width: 975px;
+	height: auto;
+	color: #5d7032;
+}
+
+.announcements
+{	
+	width: 975px;
+	padding: 10px;
+	margin-left: 30px;
+	font-family: Arial;
+	display: flex;
+}
+
+.announcement
+{	
+	margin-left: 40px;
+	width: 500px;
+	font-size: 22px;
+	line-height: 40px;
+}
+
+.announcement h2
+{
+	font-size: 24px;
+	font-weight: bold;
+}
+
+.announcementImg
+{
+	width: 300px;
+	height: 300px;
+	margin-top: 10px;
+}
+
+#businesses
+{
+	margin-top: 25px;
+	margin-bottom: 25px;
+	width: 975px;
+	height: auto;
+	color: #5d7032;
+	font-family: Arial;
+}
+
+.businesses
+{
+	width: 975px;
+	height: auto;
+	display: flex;
+	margin-top: 20px;
+}
+
+.businessText
+{	
+	width: 600px;
+	margin-left: 30px;
+	text-indent: 20px;
+	flex-direction: row;
+	font-size: 22px;
+	line-height: 40px;
+}
+
+.businessesImg
+{
+	width: 300px;
+	height: 175px;
+	margin-top: 10px;
+	margin-left: 10px;
+}
+
+.comittee
+{
+	width: 1000px;
+	margin-top: 25px;
+	margin-bottom: 25px;
+	font-family: Arial;
+	display: grid;
+	grid-column: 5;
+	grid-row: 2;
+}
+
+.comittees
+{
+	width: 1000px;
+	color: #5d7032;
+	text-align: left;
+	justify-content: space-evenly;
+}
+
+.members 
+{
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-evenly;
+	margin-bottom: 20px;
+}
+
+.member p
+{
+	padding: 10px;
+}
+
+
+.member h2
+{
+	font-size: 24px;
+}
+
 
 } /*end web media query 2*/
