--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,8 @@ a
 	height: auto;
 	margin: 0 auto;
 	align-content: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .title
@@ -110,7 +112,7 @@ a
 	font-family: Arial;
 	font-size: 16px;
 	color: #485725;
-	margin-left: 10px;
+	margin-left: 5px;
 }
 
 #Sbutton{
@@ -122,7 +124,8 @@ a
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
 	padding-top: 5px;
 	border-radius: 10px;
-	width: 85px;
+	width: 75px;
+	margin-right: 3px;
 	height: 20px;
 }
 
@@ -145,6 +148,7 @@ a
 	margin: 0 auto;
 	text-align: center;
 	margin-bottom: 10px;
+	font-family: Arial;
 }
 
 #membershipText
@@ -179,6 +183,7 @@ a
 	padding: 20px;
 	margin: 0 auto;
 	color: #5d7032;
+	font-family: Arial;
 }
 
 #fundraiser p
@@ -190,11 +195,12 @@ a
 
 #fundraiserImgs
 {
-	width: 850px;
-	display: flex;
-	justify-content: space-between;
+	width: 920px;
 	padding-top: 15px;
-	margin: 0 auto;
+	display: grid;
+	grid-template-columns: 225px 225px 225px;
+	grid-template-rows: 175;
+	grid-column-gap: 100px;
 }
 
 .fundraiserImg
@@ -205,11 +211,9 @@ a
 
 #fundraiserTitles
 {
-	width: 850px;
+	width: 920px;
 	font-size: 24px;
 	margin: 0 auto;
-	display: flex;
-	justify-content: space-between;
 }
 
 .fundraiserTitle
@@ -334,6 +338,7 @@ a
 #missionBG
 {
 	width: 960px;
+	margin: 0 auto;
 }
 
 /*Announcements*/
@@ -457,14 +462,6 @@ a
 	width: 975px;
 	height: auto;
 	color: #5d7032;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
-    background: #ffffff; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
-	border-radius: 10px;
-	border: 1px #485725 dashed;
 }
 
 #about1
@@ -506,7 +503,6 @@ a
 	font-size: 30px;
 	font-family: Arial;
 }
-
 	
 #about2
 {
@@ -516,14 +512,6 @@ a
 	height: auto;
 	margin-top: 25px;
 	margin-bottom: 25px;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
-    background: #ffffff; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
-	border-radius: 10px;
-	border: 1px #485725 dashed;
 }
 
 #about2ImageCon 
@@ -559,16 +547,7 @@ a
 	margin-top: 25px;
 	margin-bottom: 25px;
 	width: 975px;
-	height: auto;
 	color: #5d7032;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
-    background: #ffffff; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
-	border-radius: 10px;
-	border: 1px #485725 dashed;
 }
 
 #contactTop
@@ -611,25 +590,23 @@ a
 	font-family: Arial;
 }
 
-	
 #cont2
 {
 	color: #5d7032;
-	display: flex;
 	width: 975px;
 	height: auto;
 	margin-top: 25px;
-	margin-bottom: 25px;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
-    background: #ffffff; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
-	border-radius: 10px;
-	border: 1px #485725 dashed;
 }
 
+#contactForm
+{
+	margin: 0 auto;
+	height: 370px;
+	width: 500px;
+	padding: 10px;
+	background-color: #d9bb9a;
+	color: #915d4a;
+}
 
 #cont2TextCon 
 {
@@ -637,7 +614,7 @@ a
 	flex-direction: column;
 	margin-left: 30px;
 	margin-top: 10px;
-	margin-bottom: 20px; 
+	margin-bottom: 10px; 
 }
 
 #cont2TextCon p 
@@ -646,16 +623,6 @@ a
 	font-family: Arial;
 	margin-right: 50px;
 	line-height: 40px;
-}
-
-#contactForm
-{
-	margin-top: 150px;
-	margin-right: 20px;
-	height: 415px;
-	padding: 10px;
-	background-color: #d9bb9a;
-	color: #915d4a;
 }
 
 input[ type=text ], input[ type=email ], select, textarea
@@ -671,7 +638,7 @@ input[ type=text ], input[ type=email ], select, textarea
 
 input [ type=text ], select, textarea, #message
 {
-	padding-bottom: 125px;
+	padding-bottom: 100px;
 }
 
 /*membership section*/
@@ -679,23 +646,16 @@ input [ type=text ], select, textarea, #message
 #memberCon
 {
 	margin-top: 25px;
+	margin: 0 auto;
 	margin-bottom: 25px;
-	width: 975px;
+	width: 960px;
 	height: auto;
 	color: #5d7032;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
-    background: #ffffff; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
-	border-radius: 10px;
-	border: 1px #485725 dashed;
 }
 
 #memberTop
 {
-	width: 975px;
+	width: 960px;
 	display: flex;
 	margin: 0 auto;
 }
@@ -733,30 +693,29 @@ input [ type=text ], select, textarea, #message
 	width: 975px;
 	height: auto;
 	color: #5d7032;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
-    background: #ffffff; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
-	border-radius: 10px;
-	border: 1px #485725 dashed;
 }
 
 .eventBox
 {
 	width: 975px;
 	padding-top: 15px;
-	margin: 0 auto;
+	margin-left: 50px;
+	display: grid;
+	grid-template-rows: auto; 
+	grid-template-columns: repeat(3, 225px);
+	grid-column-gap: 100px; 
+	grid-row-gap: 10px;
 }
 
-.eventImages
+#evBottom
 {
-	width: 850px;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
+	margin-left: 225px;
+	padding-top: 15px;
+	display: grid;
+	grid-template-rows: auto; 
+	grid-template-columns: repeat(2, 225px);
+	grid-column-gap: 100px; 
+	grid-row-gap: 10px;
 }
 
 .eventImg
@@ -766,31 +725,15 @@ input [ type=text ], select, textarea, #message
 	margin-top: 10px;
 }
 
-.eventText
-{
-	width: 850px;
-	font-size: 24px;
-	margin: 0 auto;
-	display: flex;
-	justify-content: space-evenly;
-}
-
-.boxText
-{
-	text-align: left;
-	width: 225px;
-}
-
 .eventButtons
 {	
-	margin: 0 auto;
-	width: 850px;
-	display: flex;	
-	margin-top: 20px;
+	margin-top: 10px;
 	margin-bottom: 10px;
-	flex-direction: row;
-	justify-content: space-evenly;
-
+	width: 70px;
+	padding: 5px;
+	color: #5d7032;
+	background-color: #FFF;
+	border: 1px dashed #5d7032;
 }
 
 /*MORE*/
@@ -1047,14 +990,6 @@ input [ type=text ], select, textarea, #message
 	width: 975px;
 	height: auto;
 	color: #5d7032;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
-    background: #ffffff; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
-	border-radius: 10px;
-	border: 1px #485725 dashed;
 }
 
 #projectsImageCon 
@@ -1070,14 +1005,6 @@ input [ type=text ], select, textarea, #message
 	width: 975px;
 	height: auto;
 	color: #5d7032;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
-    background: #ffffff; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
-	border-radius: 10px;
-	border: 1px #485725 dashed;
 }
 
 .projBottom
@@ -1127,14 +1054,6 @@ input [ type=text ], select, textarea, #message
 	width: 975px;
 	height: auto;
 	color: #5d7032;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
-    background: #ffffff; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
-	border-radius: 10px;
-	border: 1px #485725 dashed;
 }
 
 .project1
@@ -1148,7 +1067,6 @@ input [ type=text ], select, textarea, #message
 {
 	display: flex;
 	flex-direction: column;
-	
 	margin-left: 30px; 
 	margin-bottom: 20px;
 }
@@ -1196,14 +1114,6 @@ input [ type=text ], select, textarea, #message
 	height: auto;
 	margin-top: 25px;
 	margin-bottom: 25px;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
-    background: #ffffff; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
-	border-radius: 10px;
-	border: 1px #485725 dashed;
 }
 
 .project2ImageCon 
@@ -1271,7 +1181,6 @@ input [ type=text ], select, textarea, #message
 {
 	width: 275px;
 	height: 206px;
-
 }
 
 } /*end web media query1*/
@@ -1290,6 +1199,46 @@ input [ type=text ], select, textarea, #message
 	height: auto;
 	margin: 0 auto;
 	align-content: center;
+}
+
+#mainNav {
+	height: 175px;
+	width: 1050px;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cedcad+0,ffffff+100 */
+	background: #cedcad; /* Old browsers */
+    background: -moz-linear-gradient(top, #cedcad 0%, #ffffff 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #cedcad 0%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #cedcad 0%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedcad', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+	display: flex;
+}
+
+#logoContainer {
+	width: 150px;
+	height: 150px;
+	margin-top: 10px;
+	margin-left: 15px;
+}
+
+#mainNav ul{
+	display: flex;
+	height: 175px;
+	margin-top: 75px;
+}
+
+#mainNav ul li {
+	font-family: Arial;
+	font-size: 18px;
+	color: #485725;
+	margin-left: 5px;
+}
+
+#mainNav ul li a {
+	text-decoration: none;
+	flex-direction: row;
+	padding: 5px;
+	border-radius: 10px;
+	color: #5d7032;
 }
 
 #footer {
@@ -1349,6 +1298,7 @@ input [ type=text ], select, textarea, #message
 
 } /*end web media query 2*/ 
 
+
 @media screen and (min-width: 1200px) {
 
 .divider
@@ -1358,7 +1308,7 @@ input [ type=text ], select, textarea, #message
 
 #mainNav {
 	height: 175px;
-	width: 1400px;
+	width: 1200px;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cedcad+0,ffffff+100 */
 	background: #cedcad; /* Old browsers */
     background: -moz-linear-gradient(top, #cedcad 0%, #ffffff 100%); /* FF3.6-15 */
@@ -1375,7 +1325,7 @@ input [ type=text ], select, textarea, #message
 	margin-left: 25px;
 }
 
-#mainNav ul{
+#mainNav ul {
 	display: flex;
 	height: 175px;
 	margin-top: 75px;
@@ -1383,23 +1333,11 @@ input [ type=text ], select, textarea, #message
 
 #mainNav ul li {
 	font-family: Arial;
-	font-size: 24px;
+	font-size: 20px;
 	color: #485725;
 	margin-left: 15px;
 }
 
-#Sbutton{
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
-	background: #b2c584; /* Old browsers */
-    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
-	padding-top:5px;
-	border-radius: 10px;
-	width: 85px;
-	height: 30px;
-}
 
 #mainNav ul li a {
 	text-decoration: none;
@@ -1419,6 +1357,132 @@ input [ type=text ], select, textarea, #message
 	box-shadow: 2px 1px 18px #a6b87b;
 	border-radius: 10px;
 	padding: 5px;
+}
+
+#footer {
+	height: 50px;
+	width: 1200px;
+	margin: 0 auto;
+	color: #5d7032;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,cedcad+100 */
+	background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #cedcad 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#cedcad 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#cedcad 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#cedcad',GradientType=0 ); /* IE6-9 */
+	display: flex;
+}
+
+#footerNav ul
+{
+	width: 1150px;
+	display: flex;
+	height: 50px;
+	margin-left: 50px;
+}
+
+#footerNav ul li 
+{
+	font-family: Arial;
+	font-size: 16px;
+	color: #5d7032;
+	margin-top: 15px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+
+#footerNav ul li a 
+{
+	color: #5d7032;
+	text-decoration: none;
+	flex-direction: row;
+	padding: 5px;
+	border-radius: 10px;
+}
+
+.sbutton
+{
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
+	background: #b2c584; /* Old browsers */
+    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
+	box-shadow: 2px 1px 18px #a6b87b;
+	border-radius: 10px;
+	padding: 5px;
+}
+
+}
+
+@media screen and (min-width: 1400px) {
+
+#mainNav {
+	height: 175px;
+	width: 1400px;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cedcad+0,ffffff+100 */
+	background: #cedcad; /* Old browsers */
+    background: -moz-linear-gradient(top, #cedcad 0%, #ffffff 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #cedcad 0%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #cedcad 0%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedcad', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+	display: flex;
+}
+
+#logoContainer {
+	width: 150px;
+	height: 150px;
+	margin-top: 10px;
+	margin-left: 15px;
+}
+
+#mainNav ul {
+	display: flex;
+	height: 175px;
+	margin-top: 75px;
+}
+
+#mainNav ul li {
+	font-family: Arial;
+	font-size: 24px;
+	color: #485725;
+	margin-left: 10px;
+}
+
+
+#mainNav ul li a {
+	text-decoration: none;
+	flex-direction: row;
+	padding: 5px;
+	border-radius: 10px;
+	color: #5d7032;
+}
+
+#mainNav ul li a:hover {
+ /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
+	background: #b2c584; /* Old browsers */
+    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
+	box-shadow: 2px 1px 18px #a6b87b;
+	border-radius: 10px;
+	padding: 5px;
+}
+
+#Sbutton{
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
+	background: #b2c584; /* Old browsers */
+    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
+	padding-top: 5px;
+	border-radius: 10px;
+	width: 85px;
+	margin-right: 3px;
+	height: 30px;
 }
 
 #footer {
@@ -1475,6 +1539,7 @@ input [ type=text ], select, textarea, #message
 	border-radius: 10px;
 	padding: 5px;
 }
+
 
 /*INDEX PAGE*/
 
@@ -1640,4 +1705,4 @@ input [ type=text ], select, textarea, #message
 }
 
 
-} /*end web media query 2*/
+} /*end web media query 4*/
